--- a/staj/about_us.css
+++ b/staj/about_us.css
@@ -39,7 +39,7 @@
     font-size: 1.25rem;
 }
 
-#about-us-container{
+/*#about-us-container{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -48,10 +48,11 @@
     background-color: rgba(157, 157, 255, 1);
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.438);
     height: 8vh;
-}
+}*/
 
 .navbar-nav{
     font-family: 'Raleway', sans-serif;
+    font-weight: 600;
 }
 
 .material-symbols-outlined{
@@ -82,7 +83,7 @@
     text-decoration: underline;
     text-underline-offset: 1.25rem;
     text-decoration-thickness: 0.50rem;
-    font-family: 'Khyay', sans-serif; 
+    font-family: 'Mohave', sans-serif;
 }
 
 
