--- a/git_example/general_tasks.css
+++ b/git_example/general_tasks.css
@@ -3,7 +3,7 @@
 }
 
 .sidebar{
-    background-image: linear-gradient(#97c1ed76 10% , rgba(142, 112, 120, 0.456) 70%);
+    background: linear-gradient(  rgba(245, 218, 255, 0.6) -1.6%, rgba(91, 71, 188, 0.3) 77.6%);
     border-radius: 20px 0px 0px 20px;
     width: 19%;
     padding-left: 1.25rem; 
